<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context=".view.MainActivity">

    <TextView
        android:id="@+id/textViewNumeroUm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/valor_um"
        android:textSize="19sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/editTextNumeroUm"/>

    <EditText
        android:id="@+id/editTextNumeroUm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_informe_numero"
        android:textAlignment="center"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textViewNumeroUm"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/textViewNumeroDois"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/valor_dois"
        android:textSize="19sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/textViewNumeroUm"
        app:layout_constraintTop_toTopOf="@id/editTextNumeroDois"/>

    <EditText
        android:id="@+id/editTextNumeroDois"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_informe_numero"
        android:textAlignment="center"
        android:inputType="numberDecimal"
        app:layout_constraintTop_toBottomOf="@id/editTextNumeroUm"
        app:layout_constraintStart_toEndOf="@id/textViewNumeroDois"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/textViewNumeroTres"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/valor_tres"
        android:textSize="19sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/textViewNumeroDois"
        app:layout_constraintTop_toTopOf="@id/editTextNumeroTres"/>

    <EditText
        android:id="@+id/editTextNumeroTres"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_informe_numero"
        android:textAlignment="center"
        android:inputType="numberDecimal"
        app:layout_constraintTop_toBottomOf="@id/editTextNumeroDois"
        app:layout_constraintStart_toEndOf="@id/textViewNumeroTres"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/textViewNumeroQuatro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/valor_quatro"
        android:textSize="19sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/textViewNumeroTres"
        app:layout_constraintTop_toTopOf="@id/editTextNumeroquatro"/>

    <EditText
        android:id="@+id/editTextNumeroquatro"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_informe_numero"
        android:textAlignment="center"
        android:inputType="numberDecimal"
        app:layout_constraintTop_toBottomOf="@id/editTextNumeroTres"
        app:layout_constraintStart_toEndOf="@id/textViewNumeroQuatro"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/textViewNumeroCinco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/valor_cinco"
        android:textSize="19sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/textViewNumeroQuatro"
        app:layout_constraintTop_toTopOf="@id/editTextNumeroCinco"/>

    <EditText
        android:id="@+id/editTextNumeroCinco"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_informe_numero"
        android:textAlignment="center"
        android:inputType="numberDecimal"
        app:layout_constraintTop_toBottomOf="@id/editTextNumeroquatro"
        app:layout_constraintStart_toEndOf="@id/textViewNumeroCinco"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/btn_aritmetica"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/btn_media_aritmetica"
        android:textAllCaps="true"
        app:layout_constraintTop_toBottomOf="@id/editTextNumeroCinco"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_ponderada"/>

    <Button
        android:id="@+id/btn_ponderada"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_media_ponderada"
        android:textAllCaps="true"
        app:layout_constraintTop_toTopOf="@id/btn_aritmetica"
        app:layout_constraintStart_toEndOf="@id/btn_aritmetica"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/btn_harmonica"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/btn_media_Harmonica"
        android:textAllCaps="true"
        app:layout_constraintTop_toBottomOf="@id/btn_ponderada"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>